--- a/templates/welcome.html.twig
+++ b/templates/welcome.html.twig
@@ -222,7 +222,7 @@
         <div class="column">
           <h3>"I shouldn't have gone with their competitor."</h3>
           <p>
-            <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+            <img src="{{ url('hkt/psr7-asset', {'vendor': 'hkt', 'package': 'psr7-asset-example', 'file': 'images/avatar/nan.jpg'}) }}" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
           </p>
         </div>
       </div>
